--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 	<title>Главная</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230421202445">
+	<link rel="stylesheet" href="css/style.min.css?_v=20231020080400">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -72,7 +72,7 @@
 			<section class="page__services services">
 				<div class="services__container">
 					<div class="services__body">
-						<article class="services__item">
+						<div class="services__item">
 							<div class="services__icon">
 								<img src="img/services/01.svg" alt="">
 							</div>
@@ -80,8 +80,8 @@
 								<h3 class="services__title">More coverage</h3>
 								<div class="services__text">Brella covers 13,000+ injuries and illnesses from concussions to cancer.</div>
 							</div>
-						</article>
-						<article class="services__item">
+						</div>
+						<div class="services__item">
 							<div class="services__icon">
 								<img src="img/services/02.svg" alt="">
 							</div>
@@ -89,8 +89,8 @@
 								<h3 class="services__title">Less hassle</h3>
 								<div class="services__text">One easy-to-manage plan with paperless install and online admin tools.</div>
 							</div>
-						</article>
-						<article class="services__item">
+						</div>
+						<div class="services__item">
 							<div class="services__icon">
 								<img src="img/services/03.svg" alt="">
 							</div>
@@ -98,7 +98,7 @@
 								<h3 class="services__title">Faster benefits</h3>
 								<div class="services__text">Brella pays claims in hours–not weeks so your people can rest easy.</div>
 							</div>
-						</article>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -162,7 +162,7 @@
 						<div class="advantages__top">
 							<div class="advantages__content">
 								<div class="advantages__suptitle suptitle-content">one plan, more coverage</div>
-								<div class="advantages__title _title">No one can predict which health issues might come their way.</div>
+								<h3 class="advantages__title _title">No one can predict which health issues might come their way.</h3>
 								<div class="advantages__text">Our broad supplemental coverage gets rid of the guesswork and puts cash in your team’s pockets for most conditions that require urgent medical attention.</div>
 							</div>
 							<div class="advantages__items">
@@ -173,22 +173,22 @@
 						</div>
 						<div class="advantages__bottom">
 							<div class="advantages__inner">
-								<article class="advantages__item">
+								<div class="advantages__item">
 									<div class="advantages__value">5K</div>
 									<div class="advantages__name">covered injuries and illnesses from fractures and appendicitis to cancer</div>
-								</article>
-								<article class="advantages__item">
+								</div>
+								<div class="advantages__item">
 									<div class="advantages__value">1X</div>
 									<div class="advantages__name">more covered conditions than Accident and Critical Illness plans—combined</div>
-								</article>
-								<article class="advantages__item">
+								</div>
+								<div class="advantages__item">
 									<div class="advantages__value">40 %</div>
 									<div class="advantages__name">plans are 100% guaranteed issue. No medical underwriting required</div>
-								</article>
-								<article class="advantages__item">
+								</div>
+								<div class="advantages__item">
 									<div class="advantages__value">0</div>
 									<div class="advantages__name">Zero limitations or exclusions for pre-existing conditions</div>
-								</article>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -227,7 +227,7 @@
 			<section class="page__partners partners">
 				<div class="partners__container">
 					<div class="partners__body">
-						<div class="partners__title _title">Proudly backed by</div>
+						<h2 class="partners__title _title">Proudly backed by</h2>
 						<div class="partners__slider slider-partners">
 							<div class="slider-partners__slider swiper">
 								<div class="slider-partners__wrapper swiper-wrapper">
@@ -316,7 +316,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__about about">
+			<div class="page__about about">
 				<div class="about__container">
 					<div class="about__body">
 						<article class="about__item">
@@ -348,12 +348,12 @@
 						</article>
 					</div>
 				</div>
-			</section>
+			</div>
 			<section class="page__talk talk">
 				<div class="talk__content">
 					<div class="talk__container">
 						<div class="talk__body">
-							<div class="talk__title _title">Ready to explore Brella’s supplemental health solution?</div>
+							<h2 class="talk__title _title">Ready to explore Brella’s supplemental health solution?</h2>
 							<div class="talk__text">Let’s talk.</div>
 							<a class="talk__button" href="#">Get in touch</a>
 						</div>
@@ -457,9 +457,9 @@
 		</div>
 	</div>
 </div> -->
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.1/chart.min.js?_v=20230421202445"></script> -->
-	<script src="https://cdn.jsdelivr.net/npm/chart.js?_v=20230421202445"></script>
-	<script src="js/app.min.js?_v=20230421202445"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.1/chart.min.js?_v=20231020080400"></script> -->
+	<script src="https://cdn.jsdelivr.net/npm/chart.js?_v=20231020080400"></script>
+	<script src="js/app.min.js?_v=20231020080400"></script>
 </body>
 
 </html>
